--- a/style.css
+++ b/style.css
@@ -124,6 +124,9 @@
     #hero-section {
       display: none !important;
     }
+    nav{
+        position:static;
+    }
     #navbar{
       flex-direction: column;
     }
